--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,23 @@
 	<classpathentry kind="lib" path="D:/org.testng.eclipse.updatesite/plugins/org.testng_7.0.0.r201908191551.jar"/>
 	<classpathentry kind="lib" path="D:/org.testng.eclipse.updatesite/plugins/org.yaml.snakeyaml.source_1.21.0.jar"/>
 	<classpathentry kind="lib" path="D:/org.testng.eclipse.updatesite/plugins/org.yaml.snakeyaml_1.21.0.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/commons-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/commons-compress-1.19.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/jaxb-api-2.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/jaxb-impl-2.3.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-examples-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-excelant-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-ooxml-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-ooxml-schemas-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-scratchpad-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/SparseBitSet-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
