--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-scratchpad-4.1.2.jar"/>
 	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/SparseBitSet-1.2.jar"/>
 	<classpathentry kind="lib" path="D:/sikulixapi-2.0.3.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
