--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="D:/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar"/>
 	<classpathentry kind="lib" path="D:/selenium-java-3.141.59/libs/client-combined-3.141.59.jar"/>
 	<classpathentry kind="lib" path="D:/selenium-java-3.141.59/libs/client-combined-3.141.59-sources.jar"/>
@@ -43,6 +39,5 @@
 	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/poi-scratchpad-4.1.2.jar"/>
 	<classpathentry kind="lib" path="D:/poi-bin-4.1.2-20200217/poi-4.1.2/lib/SparseBitSet-1.2.jar"/>
 	<classpathentry kind="lib" path="D:/sikulixapi-2.0.3.jar"/>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
